--- a/descendence/src/app/profile/stats/stats.component.scss
+++ b/descendence/src/app/profile/stats/stats.component.scss
@@ -1,10 +1,10 @@
 .stats-container {
 	padding: 1.5rem;
 	display: grid;
-	grid-auto-rows: minmax(20rem,auto);
+	max-width: 80vw;
+	grid-auto-rows: minmax(15rem,auto);
 	grid-template-columns: repeat(3, 1fr);
-	max-width: 100vw;
-	gap: 2rem;
+	gap: 1.25rem;
 	justify-content: space-evenly;
 }
 
@@ -69,8 +69,8 @@
 }
 
 .temp-circle {
-	width: 25rem;
-	height: 25rem;
+	width: 12rem;
+	height: 12rem;
 	border-radius: 50%;
 	background-color: #6DE897;
 	place-self: center;
